tags/2013-08-29_cppreference/Archive/9320b73f1f0c4af2001b41bbd2fb17eb-cc73e281b3b6abc9bf6cf4f153b944a6/output
+ g++ -std=c++11 main.cpp -O3
main.cpp:6:22: error: type/value mismatch at argument 1 in template parameter list for ‘template<class T> using func_type = void (*)(T&, T&)’
 func_type<std::vector> func() 
                      ^
main.cpp:6:22: error:   expected a type, got ‘vector’
main.cpp: In function ‘int func()’:
main.cpp:7:30: error: type/value mismatch at argument 1 in template parameter list for ‘template<class T> using func_type = void (*)(T&, T&)’
 {return func_type<std::vector>();}
                              ^
main.cpp:7:30: error:   expected a type, got ‘vector’
